syntax = "proto3";

// Use convenience types defined and published as a package by Google
import "google/protobuf/empty.proto";

// Specify the directory where the code is automatically generated
// option go_package = "./";
option go_package = "../server-go/pb";

// Specify package name to avoid name collision
package order;

// Method definition
service OrderService {
  // general
  // create 
  rpc Create (Order) returns (Order) {}

  // update 
  rpc Update (Order) returns (OrderBoolResponse) {}

  // delete
  rpc Delete (OrderIdRequest) returns (OrderBoolResponse) {}

  // get by id
  rpc GetById (OrderIdRequest) returns (Order) {}

  // get by uuid
  rpc GetByUuid (OrderUuidRequest) returns (Order) {}

  // get onsale list by user
  rpc GetSoldListByUser (OrderUserIdRequest) returns (OrderList) {}

  // get purchaed list by user
  rpc GetPurchasedListByUser (OrderUserIdRequest) returns (OrderList) {}

  // get list by id list
  rpc GetListByIdList (OrderIdListRequest) returns (OrderList) {}

  // get all
  rpc GetAll (google.protobuf.Empty) returns (OrderList) {}
}

// ユーザー情報を表すメッセージ型
message Order {
  int64 id = 1;
  string uuid = 2;
  int64 content_id = 3;
  int64 billing_id = 4;
  int64 order_user_id = 5; // user_id
  Progress progress = 6;
  enum Progress {
    // Not 
    Requested = 0;
    Paid = 1;
    Pended = 2;
    Canceled = 3;
    Refunded = 4;
    };
  Service service = 7;
  enum Service {
    Point = 0;
    Cash = 1;
    Credit = 2;
    };
  int64 price = 8;
  int64 asp_rate = 9;
  bool via_asp = 10; // true: asp, false: direct
  int64 used_point = 11;
  string created_at = 12;
  string updated_at = 13;
  bool is_deleted = 14;
}

message OrderList {
  repeated Order order = 1;
}

// request
message OrderIdRequest {
  int64 id = 1;
}

message OrderUuidRequest {
  string uuid = 1;
}

message OrderIdListRequest {
  repeated int64 id = 1;
}

message OrderUserIdRequest {
  int64 user_id = 1;
}

// response
message OrderBoolResponse {
  bool error = 1;
}